--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
 
 @tailwind base;
 @tailwind components;
@@ -19,7 +19,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'Ubuntu', sans-serif;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 @layer utilities {
